small spacing fix

--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -61,7 +61,8 @@ footer {
 			}
 
 			h3{
-				margin-top: rem-calc(10);
+				margin-bottom: rem-calc(5);
+				margin-top: rem-calc(20);
 			}
 
 			p {
